web/html/src/branding/css/base/theme.scss
/**
 * This file is the old core theme file, over time we can hopefully clean this up and separate the logic accordingly
 */

a {
  color: $link-color;
  cursor: pointer;
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}

header {
  min-height: fit-content !important;
  height: auto;
  width: 100%;
  border: none;
  border-radius: 0;
  border-width: 0 !important;
  border-bottom: 2px solid $header-border !important;
  margin-bottom: 0;
  background: $header !important;

  a {
    color: $header-text;
  }

  a:hover {
    color: $header-text;
  }

  img {
    float: left;
  }
}

.spacewalk-main-column-layout {
  position: relative;
  display: flex;
  flex: 1 1 auto;
  overflow: hidden;
  max-width: 100vw;

  aside {
    overflow: auto !important;
    float: none !important;
    position: relative !important;

    @media (max-width: $screen-tablet) {
      position: absolute !important;
      inset: 0;
      z-index: 2000;
      min-width: 100% !important;
      max-width: none !important;
    }

    footer {
      position: -webkit-sticky;
      position: sticky;
      bottom: 0;
    }
  }

  section {
    width: 100% !important;
    float: none !important;
  }

  #page-body {
    flex: 1 1 auto;
    overflow: auto;
  }
}

footer {
  border-top: 1px solid $aside-footer-border;
  background: inherit;
  padding: 3px 12px;
  color: $aside-footer-text;
  font-weight: normal;
  font-size: 0.9em;
  height: auto;
  min-height: auto;
  clear: both;
  position: absolute;
  bottom: 0px;
  width: 100%;
  @include make-row;
  margin: 0 auto;

  a {
    color: inherit;
    text-decoration: underline;
  }

  a:hover {
    color: inherit;
  }

  div.wrapper {
    background: $aside-footer-logo-background;
    min-height: 28px;
    padding-right: 55px !important;
    > div {
      padding: 3px 0 2px 0;
    }
  }
}

/* override spacewalk rules */
section {
  transition: none !important;
  -webkit-transition: none !important;
}

.spacewalk-main-column-layout {
  @include make-row;
  /* override the grid row margin */
  margin-right: 0;
  margin-left: 0;
  aside {
    flex: 0 0 17%;
    min-width: 300px;
    max-width: min(400px, 17%);
    background: $aside-background;
    border-right: none;
    /* erasing the predefined paddings in the columns */
    padding: 0;
    position: fixed;
    #nav nav ul.level1 {
      overflow-y: auto !important;
      scrollbar-color: rgba(200, 200, 200, 0.5) transparent;
      scrollbar-width: thin;

      &::-webkit-scrollbar {
        width: 7px;
      }

      &::-webkit-scrollbar-thumb {
        border-radius: 10px;
        -webkit-box-shadow: inset 0 0 6px rgba(200, 200, 200, 0.5);
        background: rgba(200, 200, 200, 0.5);
      }
    }
  }

  /* fixing margins in the 1st and last columns */
  section {
    padding: 0 $content-area-padding-side $content-area-padding-bottom;
    float: right;
  }
}

#breadcrumb {
  color: $header-text;
  display: inline-block;
  overflow: hidden;
  text-overflow: ellipsis;

  span {
    vertical-align: bottom;
  }
  span.level,
  a {
    padding: 0 3px;
  }
  i {
    margin-right: 0;
  }
}

.navbar-right {
  float: right;
}

.navbar-collapse {
  animation: none !important;
  transition: none !important;
  display: flex;
  flex-direction: column;

  #nav {
    display: flex;
    flex-direction: column;
    flex: 1 1 auto;
    overflow: hidden;
    width: 100%;

    nav {
      display: flex;
      flex-direction: column;
      overflow: hidden;

      > ul {
        flex: 1 1 auto;
        margin: 0 !important;
      }
    }
  }
}

header,
nav.navbar-pf {
  padding: 0 !important;

  .navbar-toggle {
    display: inline-block;
    float: none;
    margin: 0;
    padding: 0;
    border: none;

    i {
      margin: 0;
      font-size: 1.5em;
    }
  }
  .navbar-toggle:hover {
    color: $green;
  }
  .navbar-header {
    float: none;
    display: inline-block;
    vertical-align: top;
    margin-right: 5px;
  }
  .navbar-controls {
    // TODO: Check
    @extend .navbar-right;
    font-size: 1em;
    display: inline-block;
    position: relative;
    vertical-align: middle;
    margin-top: -2px;

    a,
    .header-non-link {
      display: inline-block;
      padding: 4px 12px;
      border-radius: 2px;

      i {
        margin: 0 !important;
      }
    }
  }

  a.toggle-box:hover,
  a.toggle-box.open,
  .manual-toggle-box:hover,
  .manual-toggle-box.open {
    color: $green;
  }
  .box-wrapper {
    position: absolute;
    top: 100%;
    background-color: $header;
    border-radius: 0px 2px 2px 2px;
    z-index: 1000;
    box-shadow: 0px 4px 4px 0px $gray;
    margin-top: 5px;
  }

  /* overwrite the padding the grid columns give */
  &#header {
    padding-right: 0;
    padding-left: 0;
  }
  /* Search header box */
  form#search-form {
    .form-group {
      width: 200px;
      padding: 10px;
      display: flex;
      flex-direction: column;
      gap: 4px;
      margin: 0;
    }
    input[type="search"],
    select.form-control {
      width: 100%;
    }
    button {
      text-align: center;
      background: transparent;

      &,
      &:hover {
        color: $header-text;
      }
    }
  }

  /* Header Logo bar */
  .navbar-brand {
    margin: 0 !important;
    float: none;
    padding: 0;
    height: auto;
    line-height: 1.2em;
    font-size: 1.6em;
    display: inline-block;
    vertical-align: baseline;
    color: $header-text;
    > i {
      display: none;
    }
    > span > i {
      font-size: 0.4em;
      margin-right: 0.8em;
    }
  }
  .navbar-brand:hover {
    color: $header-text;
  }
}
/* ... */

